--- a/cmms/views/report_partsby_producttype_summary.xml
+++ b/cmms/views/report_partsby_producttype_summary.xml
@@ -6,7 +6,11 @@
            <t t-call="cmms.cmms_internal_layout">
             <div class="page">
                  <div class="row">
-                     <div class="text-center"><h4 t-esc="heading"/></div>
+                     <div class="row text-center"><h4 t-esc="heading"/></div>
+                     <t t-if="subheading">
+                        <div class="row text-center"><strong t-esc="subheading"/></div>
+                     </t>
+
                  </div>
 
                 <table class="table  table-bordered">
