--- a/cmms/wizard/common_report_wizard_view.xml
+++ b/cmms/wizard/common_report_wizard_view.xml
@@ -18,6 +18,7 @@
                     <field name="report_year"  attrs="{'invisible': [('report_list','not in',('machine_analysis_report','parts_depreciation_report'))],'required':[('report_list','==','machine_analysis_report')]}" />
                     <field name="machine_type_ids"  attrs="{'invisible': [('report_list','!=','machine_analysis_report')]}" widget="many2many_tags" options="{'no_open': True, 'no_create':True}"/>
                     <field name="machine_categ_ids"  attrs="{'invisible': [('report_list','!=','machine_analysis_report')]}" widget="many2many_tags" options="{'no_open': True, 'no_create':True}"/>
+                    <field name="machine_id" domain="[('company_id','=',company_id)]" attrs="{'invisible': [('report_list','!=','parts_by_producttype_report')]}"/>
                 </group>
                 <group col="4">
                     <field name="start_date" attrs="{'invisible': [('report_list','in',('machine_analysis_report','machine_status_report','parts_depreciation_report'))]}"/>
