--- a/cmms/views/pm_sch_plan_report.xml
+++ b/cmms/views/pm_sch_plan_report.xml
@@ -8,13 +8,20 @@
                 <table class="table table-bordered">
                     <caption class="text-uppercase" style="text-align:center;"> <strong> <h3><span t-esc="heading" /> </h3></strong>  </caption>
                     <thead>
-                        <th class="text-center">SAT</th>
-                        <th class="text-center">SUN</th>
-                        <th class="text-center">MON</th>
-                        <th class="text-center">TUE</th>
-                        <th class="text-center">WED</th>
-                        <th class="text-center">THU</th>
-                        <th class="text-center">FRI</th>
+                        <t t-if="sub_heading">
+                            <tr>
+                                 <th class="text-center"  colspan="7"  t-esc="sub_heading"/>
+                            </tr>
+                        </t>
+                        <tr>
+                            <th class="text-center">SAT</th>
+                            <th class="text-center">SUN</th>
+                            <th class="text-center">MON</th>
+                            <th class="text-center">TUE</th>
+                            <th class="text-center">WED</th>
+                            <th class="text-center">THU</th>
+                            <th class="text-center">FRI</th>
+                        </tr>
                     </thead>
                     <tbody>
                     <tr style="page-break-inside: avoid">
