--- a/cicon_qc/wizard/common_report_wizard.xml
+++ b/cicon_qc/wizard/common_report_wizard.xml
@@ -13,6 +13,7 @@
                 <group>
                     <field name="origin_value_ids" widget="many2many_tags" options="{'no_create':True, 'no_open': True}" />
                     <field name="option_select" widget="radio"/>
+                    <field name="show_consultant"/>
                 </group>
 
                 <group>
