--- a/cicon_tech/views/project_view.xml
+++ b/cicon_tech/views/project_view.xml
@@ -122,6 +122,7 @@
                         <group col="4" >
                             <field name="site_ref_no" required="True"/>
                             <field name="last_site_ref"/>
+                            <field name="last_submittal_date"/>
                             <field name="coordinator_id" />
                         </group>
                         <field name="site_contact_ids">
