--- a/cicon_tech/views/tech_submittal_view.xml
+++ b/cicon_tech/views/tech_submittal_view.xml
@@ -7,15 +7,15 @@
             <field name="res_model">tech.submittal.revision</field>
             <field name="view_mode">tree,form,pivot</field>
             <field name="domain">[('state','not in', ('resubmitted','cancel'))]</field>
-            <field name="limit">20</field>
+            <field name="limit">80</field>
             <field name="context">{"search_default_current_month":1}</field>
         </record>
 
         <menuitem name="Technical" id="tech_menu" groups="group_tech_user,base.group_no_one"/>
-        <menuitem name="Technical Submittals" parent="tech_menu" id="tech_menu_submittal"/>
+        <menuitem name="Technical Submittals" parent="tech_menu" id="tech_menu_submittal" sequence="30"/>
 
 
-        <menuitem name="Submittal Revision" parent="tech_menu_submittal" id="tech_menu_submittal_revision_list"
+        <menuitem name="Submittals &amp; Revisions" parent="tech_menu_submittal" id="tech_menu_submittal_revision_list"
                   action="action_tech_submittal_revision_form" sequence="10" />
 
         <!--<record model="ir.actions.act_window" id="action_project_tree_view">-->
@@ -42,15 +42,12 @@
             <field name="act_window_id" ref="action_project_tree_view"/>
         </record>
 
-
-          <record id="action_project_tree_view_form" model="ir.actions.act_window.view">
+        <record id="action_project_tree_view_form" model="ir.actions.act_window.view">
             <field eval="2" name="sequence"/>
             <field name="view_mode">form</field>
             <field name="view_id" ref="cicon_job_site_tech_form_view"/>
             <field name="act_window_id" ref="action_project_tree_view"/>
         </record>
-
-
 
         <record model="ir.actions.act_window" id="action_res_partners_tech">
             <field name="name" >Customers </field>
@@ -58,8 +55,9 @@
             <field name="domain">[('customer','=',True)]</field>
         </record>
 
-        <menuitem id="res_partner_tech_menu" name="Customers" parent="tech_menu_submittal" action="action_res_partners_tech" sequence="80"/>
-        <menuitem id="res_partner_project_tech_menu" name="Job Sites" parent="tech_menu_submittal" action="action_project_tree_view" sequence="90"/>
+        <menuitem name="Customer / Job Site" parent="tech_menu" id="tech_menu_customer_main" sequence="10"/>
+        <menuitem id="res_partner_tech_menu" name="Customers" parent="tech_menu_customer_main" action="action_res_partners_tech" sequence="10"/>
+        <menuitem id="res_partner_project_tech_menu" name="Job Sites" parent="tech_menu_customer_main" action="action_project_tree_view" sequence="20"/>
 
     </data>
 </odoo>
