--- a/cicon_tech/wizard/document_revision_wizard_view.xml
+++ b/cicon_tech/wizard/document_revision_wizard_view.xml
@@ -30,9 +30,7 @@
             </field>
         </record>
 
-
-
-          <act_window name="Document Revision"
+        <act_window name="Document Revision"
             src_model="tech.submittal.document.revision"
             res_model="tech.document.revision.wizard"
             view_id ="doc_revision_wizard"
@@ -43,7 +41,33 @@
 
          />
 
+         <record id="tech_bbs_weight_wizard_view" model="ir.ui.view">
+            <field name="name">BBS Weight</field>
+            <field name="model">tech.bbs.weight.wizard</field>
+            <field name="arch" type="xml">
+                <form string="BBS Weight" >
+                    <group>
+                        <field name="revision_id"  options="{'no_create':True,'no_open':True}" invisible="1"  />
+                        <field name="bbs_weight"/>
+                    </group>
+                    <footer>
+                        <button name="update_weight" confirm="Confirm BBS Weight Update ?" string="Update" type="object" class="oe_highlight" />
+                        or
+                        <button string="Cancel" class="oe_link" special="cancel" />
+                    </footer>
+                </form>
+            </field>
+        </record>
 
+          <act_window name="BBS Weight Update"
+            src_model="tech.submittal.revision"
+            res_model="tech.bbs.weight.wizard"
+            view_id ="tech_bbs_weight_wizard_view"
+            id="action_bbs_weight_wizard"
+            groups="cicon_tech.group_cicon_tech_manager"
+            context="{'default_revision_id': active_id}"
+           target="new"
+          />
 
     </data>
 </odoo>
