--- a/cicon_qc/wizard/common_report_wizard.xml
+++ b/cicon_qc/wizard/common_report_wizard.xml
@@ -14,6 +14,7 @@
                     <field name="origin_value_ids" widget="many2many_tags" options="{'no_create':True, 'no_open': True}" />
                     <field name="option_select" widget="radio"/>
                     <field name="show_consultant"/>
+                    <field name="hide_reject"/>
                 </group>
 
                 <group>
