[FIX] Enable QC Muti Company Support

--- a/cicon_prod/report/order_analysis_report_view.xml
+++ b/cicon_prod/report/order_analysis_report_view.xml
@@ -54,7 +54,7 @@
 
 
 
-        <menuitem id="menu_order_analysis_rpt" parent="cicon_menu_report" action="action_order_analysis_report" />
+        <!--<menuitem id="menu_order_analysis_rpt" parent="cicon_menu_report" action="action_order_analysis_report" />-->
 
     </data>
 </odoo>
