--- a/cicon_prod/views/production_order_view.xml
+++ b/cicon_prod/views/production_order_view.xml
@@ -189,7 +189,7 @@
             <!--<field name="view_mode">tree,form,calendar</field>-->
              <!--<field name="view_mode">tree,form,kanban,calendar</field>-->
              <field name="context">{'search_default_pending_order':1}</field>
-             <!--<field name="context">{}</field>-->
+             <field name="domain">[('required_date','>','2017-01-01')]</field>
        </record>
 
 
@@ -325,6 +325,7 @@
             <field name="res_model">cicon.prod.order</field>
             <field name="view_mode">tree,kanban,form</field>
             <field name="view_id" ref="cicon_prod_order_plan_tree_view"/>
+            <field name="domain">[('required_date','>','2017-01-01')]</field>
        </record>
 
 
