--- a/cmms/views/report_partsby_producttype_summary.xml
+++ b/cmms/views/report_partsby_producttype_summary.xml
@@ -102,7 +102,13 @@
                                                          <td  class="text-right"> <span t-esc="i.unit_price"  t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}' /> </td>
                                                          <td  class="text-right"> <span t-esc="i.amount" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}' />  </td>
                                                      </tr>
-                                             </t>
+                                                      <tr>
+                                                        <th class="text-right" colspan="6">Total</th>
+                                                        <th class="text-right"> <span t-esc="get_total_for_machine(m.id,ptype.id)"  t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/> </th>
+                                                    </tr>
+                                                 </t>
+
+
                                      </t>
                                  </t>
                              </tbody>
@@ -158,7 +164,12 @@
                                                          <td  class="text-right"> <span t-esc="i.unit_price"  t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}' /> </td>
                                                          <td  class="text-right"> <span t-esc="i.amount" t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}' />  </td>
                                                      </tr>
+                                                   <tr>
+                                                       <th class="text-right" colspan="6">Total</th>
+                                                       <th class="text-right"> <span t-esc="get_total_for_machine(m.id,o.id)"  t-esc-options='{"widget": "monetary", "display_currency": "res_company.currency_id"}'/> </th>
+                                                   </tr>
                                              </t>
+
                                      </t>
                                  </t>
                              </tbody>
