--- a/cmms/views/report_machine_preventive_status.xml
+++ b/cmms/views/report_machine_preventive_status.xml
@@ -3,45 +3,57 @@
 <data>
 <template id="report_machine_preventive_status_template">
      <t t-call="report.html_container">
-         <t t-call="cmms.cmms_internal_layout">
-            <div class="page">
-                <div class="row">
-                    <table class="table table-bordered">
-                        <thead style="padding-top:20px;">
-                            <th style="padding-top:20px;"> Sn.</th>
-                            <th style="padding-top:20px;"> Code </th>
-                            <th style="padding-top:20px;"> Name </th>
-                            <th style="padding-top:20px;"> PM Scheme</th>
-                            <th style="padding-top:20px;"> Interval </th>
-                            <th style="padding-top:20px;"> Next Date </th>
-                            <th style="padding-top:20px;"> Last Date </th>
-                        </thead>
-                        <tbody>
-                              <t t-foreach="docs" t-as="o">
-                                    <t t-set="intervals" t-value="get_intervals(o)"/>
-                                    <t t-set="invcount" t-value="len(intervals)" />
-                                    <t t-if="invcount > 0">
-                                        <tr style="page-break-inside: avoid !important;">
-                                            <td  t-att-rowspan="invcount" style="width: 3%"> <span t-esc="o_index +1"/>  </td>
-                                            <td  t-att-rowspan="invcount" style="width: 7%"> <span t-field="o.code"/>  </td>
-                                            <td  t-att-rowspan="invcount" style="width: 30%"> <span t-field="o.name"/>  </td>
-                                            <td  t-att-rowspan="invcount" style="width: 15%"> <span t-field="o.pm_scheme_id.name"/>  </td>
-                                            <t t-foreach="intervals" t-as="i">
-                                                <t t-if="i_index > 0">
-                                                    <![CDATA[<tr>]]>
-                                                </t>
-                                                <t t-set="_schs" t-value="get_schedules(o,i)" />
-                                                <td style="width: 15%" t-att-class="'danger' if _schs and _schs[0].day_diff &lt; 0 or _schs[0].next_date == false else 'active'"> <span t-field="i.name"/> (<span t-esc="len(_schs)" />)</td>
-                                                <td style="width: 15%" t-att-class="'danger' if _schs and _schs[0].day_diff &lt; 0 or _schs[0].next_date == false else 'active'">  <span t-esc= "_schs and _schs[0].next_date"/></td>
-                                                <td style="width: 15%" t-att-class="'danger' if _schs and _schs[0].day_diff &lt; 0 or _schs[0].next_date == false else 'active'">  <span t-esc="_schs and _schs[0].last_date"/> </td>
-                                            </t>
-                                        </tr>
-                                    </t>
-                              </t>
-                        </tbody>
-                    </table>
+         <t t-foreach="docs" t-as="o">
+             <t t-call="cmms.cmms_internal_layout">
+                <div class="page">
+                    <div class="row">
+                        <table class="table table-condensed">
+                            <caption class="text-center">  <h3>  Preventive Maintenance  Status  </h3></caption>
+                            <tr>
+                                <th style="width:25%">Code :</th>
+                                <td style="width:75%"> <strong t-field="o.code"/> </td>
+                            </tr>
+                             <tr>
+                                <th style="width:25%"> Machine :</th>
+                                <td style="width:75%"> <span t-field="o.name"/> </td>
+                            </tr>
+                            <tr>
+                                <th style="width:25%"> PM SCHEME :</th>
+                                <td style="width:75%"> <span t-field="o.pm_scheme_id.name"/> </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="row mt16">
+                        <table class="table table-bordered">
+                            <thead>
+                                <th> Interval </th>
+                                <th> Next Date</th>
+                                <th> Last Date</th>
+                            </thead>
+
+                             <t t-foreach="get_intervals(o)" t-as="i">
+                                 <t t-set="_schs" t-value="get_schedules(o,i)" />
+                                 <t t-if="_schs">
+                                    <tbody>
+                                    <tr t-foreach="_schs" t-as="sh">
+                                      <t t-if="sh_index ==0">
+                                          <tr>
+                                            <td t-att-class="'danger' if  sh.day_diff &lt; 0 or sh.next_date == false else 'active'"> <span t-field="i.name"/> (<span t-esc="len(_schs)" />)</td>
+                                            <td t-att-class="'danger' if  sh.day_diff &lt; 0 or sh.next_date == false else 'active'">  <span t-field="sh.next_date" /></td>
+                                            <td t-att-class="'danger' if  sh.day_diff &lt; 0 or sh.next_date == false else 'active'">  <span t-field="sh.last_date" /> </td>
+                                          </tr>
+                                      </t>
+                                      <tr style="page-break-inside: avoid !important;">
+                                          <td colspan="3">  <span t-esc="sh_index + 1"/>)  <span t-field=" sh.task_id.name" />  </td>
+                                      </tr>
+                                    </tr>
+                                </tbody>
+                                 </t>
+                            </t>
+                        </table>
+                    </div>
                 </div>
-            </div>
+             </t>
        </t>
     </t>
 </template>
