--- a/cmms/views/job_order_form_view.xml
+++ b/cmms/views/job_order_form_view.xml
@@ -554,7 +554,8 @@
             <div class="col-xs-4">
                 <p>Work Start:   <span t-field="o.work_start_datetime" /> </p>
                 <p>Work End : <span t-field="o.work_end_datetime" /> </p>
-                <p>Work Time:</p>
+                <t t-set="_wh" t-value="o.work_hour" />
+                <p>Work Time:  <span t-esc="'%s:%s' % ( str('%02d' % _wh).split('.')[0], str('%02d' %  int(float(str('%.2f' % _wh).split('.')[1])/100*60)))"/>  </p>
                 <p>Attend By : <span t-field="o.attended_by"/> </p>
             </div>
             <div class="col-xs-8">
