--- a/cicon_tech/views/project_view.xml
+++ b/cicon_tech/views/project_view.xml
@@ -203,18 +203,16 @@
          <!--</record>-->
 
 
-  <!--<record id="view_company_form_tech" model="ir.ui.view">-->
-        <!--<field name="name">res.company.form.tech</field>-->
-        <!--<field name="model">res.company</field>-->
-        <!--<field name="inherit_id" ref="base.view_company_form"/>-->
-        <!--<field name="arch" type="xml">-->
-            <!--<group name="account_grp" position="after">-->
-                <!--<group name="tech_submittal" string="Submittal">-->
-                    <!--<field name="submittal_prefix"/>-->
-                <!--</group>-->
-            <!--</group>-->
-        <!--</field>-->
-        <!--</record>-->
+  <record id="view_company_form_tech" model="ir.ui.view">
+        <field name="name">res.company.form.tech</field>
+        <field name="model">res.company</field>
+        <field name="inherit_id" ref="base.view_company_form"/>
+        <field name="arch" type="xml">
+            <field name="parent_id" position="after">
+                    <field name="submittal_prefix"/>
+            </field>
+        </field>
+        </record>
 
 
    </data>
