--- a/cicon_qc/wizard/common_report_wizard.xml
+++ b/cicon_qc/wizard/common_report_wizard.xml
@@ -22,7 +22,7 @@
                     </page>
                     <page string="Customer / Projects"  attrs="{'invisible':[('show_filter', '=', False)]}"  >
                         <group>
-                            <field name="partner_id" options="{'no_create':True, 'no_open': True}"/>
+                            <field name="partner_id" domain="[('customer','=',True)]"    options="{'no_create':True, 'no_open': True}"/>
                             <field name="job_site_ids" widget="many2many_tags" domain="[('partner_id', '=', partner_id)]"
                                 options="{'no_create':True, 'no_open': True}"
                             />
